docs: top-level README, deploy configs, resume + interview + LinkedIn artifacts
Top-level docs
- README.md: pitch, ASCII architecture diagram, tech-stack table,
  quick start (Docker + native), end-to-end walkthrough, full API
  reference table, design-decisions log (8 entries from money math
  to enumeration-prevention), 'what I'd build next' (6 items),
  repo map, acknowledgements. Honest about deploy: live URLs are
  marked TODO until the repo owner runs DEPLOYMENT.md.
- DEPLOYMENT.md: step-by-step runbook for Render (backend + managed
  Postgres via render.yaml blueprint) and Vercel (frontend, root
  dir = frontend/, VITE_API_BASE_URL env). Curl smoke test for the
  deployed stack and a 'rotating secrets / wiping data' table.
- backend/README.md and frontend/README.md rewritten with config
  knobs, container instructions, and pointers to the interesting
  files.

Deployment configs
- backend/Dockerfile: multi-stage (maven:3.9-eclipse-temurin-21 ->
  eclipse-temurin:21-jre-alpine), runs as non-root 'app' user,
  JAVA_OPTS tuned for container memory limits
- backend/.dockerignore
- frontend/Dockerfile: multi-stage (node:22-alpine -> nginx:1.27-alpine)
  with VITE_API_BASE_URL build-arg
- frontend/nginx.conf: SPA fallback (try_files $uri /index.html),
  immutable cache for hashed assets, security headers
- frontend/.dockerignore and frontend/vercel.json (Vite framework,
  /assets/ cache headers, SPA rewrites)
- docker-compose.yml: extended from the M1 stub to bring up Postgres,
  backend (prod profile), and frontend together with healthchecks
  and depends_on conditions
- render.yaml: web service + managed Postgres blueprint with
  fromDatabase env wiring; APP_FRONTEND_ORIGIN left as sync:false
  so the deployer fills it in after Vercel finishes
- application.yml: prod profile now constructs the JDBC URL from
  DB_HOST / DB_PORT / DB_NAME if SPRING_DATASOURCE_URL isn't
  provided directly — friendlier with Render's discrete DB fields

Resume + interview + LinkedIn 